# bbs-converter

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  roadmap.md
src/bbs_converter/: __init__.py  main.py  models.py
src/bbs_converter/capture/: __init__.py  fps_controller.py  frame_buffer.py  grabber.py  monitor.py  region_selector.py  thread.py
src/bbs_converter/cli/: __init__.py  setup_wizard.py  status.py
src/bbs_converter/converter/: __init__.py  batch.py  core.py  formatter.py  history.py
src/bbs_converter/ocr/: __init__.py  cache.py  confidence.py  denoise.py  engine.py  pipeline.py  preprocessor.py  roi.py  threshold.py
tests/unit/: test_capture_fps.py  test_capture_frame_buffer.py  test_capture_grabber.py  test_capture_monitor.py  test_capture_region_selector.py  test_capture_thread.py  test_cli_args.py  test_cli_setup.py  test_cli_status.py  test_config.py  test_converter_batch.py  test_converter_core.py  test_converter_formatter.py  test_converter_history.py  test_exceptions.py  test_models.py  test_ocr_cache.py  test_ocr_confidence.py  test_ocr_engine.py  test_ocr_pipeline.py  test_ocr_preprocessing.py  test_ocr_roi.py  test_overlay_colorizer.py  test_overlay_loop.py  test_overlay_positioning.py  test_overlay_renderer.py  test_overlay_window.py  test_parser_assembler.py  test_parser_blind.py  test_parser_player.py  test_parser_pot.py  test_parser_sanitizer.py  test_parser_stack.py  test_pipeline_orchestrator.py  test_pipeline_queue.py  test_pipeline_recovery.py  test_pipeline_thread_pool.py  test_timer.py
(+22 files in other folders)
