[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bbs-converter"
version = "0.1.0"
description = "Real-time Poker HUD to Big Blinds converter via screen capture and OCR"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Parth Harish"}]

dependencies = [
    "opencv-python>=4.9.0",
    "numpy>=1.26.0",
    "pytesseract>=0.3.10",
    "mss>=9.0.0",
    "Pillow>=10.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.scripts]
bbs-converter = "bbs_converter.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
